--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.qhenshaw.gameevents": "https://github.com/qhenshaw/GameEvents.git",
     "com.qhenshaw.localmultiplayer": "https://github.com/qhenshaw/LocalMultiplayer.git",
     "com.qhenshaw.uicomponents": "https://github.com/qhenshaw/UIComponents.git",
+    "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
     "com.unity.render-pipelines.high-definition": "14.0.8",
