Posting to leaderboard works

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,8 @@
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
     "com.unity.render-pipelines.high-definition": "14.0.8",
+    "com.unity.services.authentication": "3.3.0",
+    "com.unity.services.leaderboards": "2.0.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
